--- a/flights/templates/flights/flight_form.html
+++ b/flights/templates/flights/flight_form.html
@@ -1,26 +1,36 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load custom_filters %} {# Certifique-se de carregar o template tag correto #}
-
 {% block content %}
-<h1 class="mb-4">{% if flight %}Editar Voo{% else %}Adicionar Novo Voo{% endif %}</h1>
+<h1 class="mb-4">{% if form.instance.pk %}Editar Voo{% else %}Adicionar Novo Voo{% endif %}</h1>
 <form method="post">
     {% csrf_token %}
     <div class="form-group">
         <label for="origin">Origem</label>
-        {{ form.origin|add_class:"form-control" }}
+        {{ form.origin }}
     </div>
     <div class="form-group">
         <label for="destination">Destino</label>
-        {{ form.destination|add_class:"form-control" }}
+        {{ form.destination }}
     </div>
     <div class="form-group">
         <label for="departure_time">Data e Hora de Partida</label>
-        {{ form.departure_time|add_class:"form-control" }}
+        {{ form.departure_time }}
     </div>
     <div class="form-group">
         <label for="return_time">Data e Hora de Retorno</label>
-        {{ form.return_time|add_class:"form-control" }}
+        {{ form.return_time }}
+    </div>
+    <h3>Selecionar Passageiros</h3>
+    <div class="formset">
+        {{ formset.management_form }}
+        {% for form in formset %}
+            <div class="form-group">
+                {{ form.passenger }}
+            </div>
+            <div class="form-group">
+                {{ form.has_luggage }}
+            </div>
+        {% endfor %}
     </div>
     <button type="submit" class="btn btn-primary mt-3">Salvar</button>
     <a href="{% url 'flight_list' %}" class="btn btn-secondary mt-3">Cancelar</a>
