--- a/passengers/templates/passengers/passenger_list.html
+++ b/passengers/templates/passengers/passenger_list.html
@@ -1,16 +1,18 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 <div class="container mt-4">
-    <h1>Lista de Passageiros</h1>
+    <h1 class="mb-4">Lista de Passageiros</h1>
     <a href="{% url 'passenger_create' %}" class="btn btn-success mb-3">Adicionar Novo Passageiro</a>
-    <table class="table table-striped">
+    <table class="table table-striped table-bordered">
         <thead class="thead-dark">
             <tr>
                 <th>Nome</th>
-                <th>Data de Nascimento</th> <!-- Nova coluna para Data de Nascimento -->
-                <th>RG</th> <!-- Nova coluna para RG -->
+                <th>Data de Nascimento</th>
+                <th>RG</th>
                 <th>Email</th>
+                <th>Telefone</th>
                 <th>Ações</th>
             </tr>
         </thead>
@@ -18,14 +20,19 @@
             {% for passenger in passengers %}
             <tr>
                 <td>{{ passenger.full_name }}</td>
-                <td>{{ passenger.birth_date }}</td> <!-- Exibe a Data de Nascimento -->
-                <td>{{ passenger.rg_number }}</td> <!-- Exibe o RG -->
+                <td>{{ passenger.birth_date|date:"M d, Y" }}</td>
+                <td>{{ passenger.rg }}</td>
                 <td>{{ passenger.email }}</td>
+                <td>{{ passenger.telefone|default:"Nenhum" }}</td>
                 <td>
                     <a href="{% url 'passenger_detail' passenger.id %}" class="btn btn-primary btn-sm">Detalhes</a>
                     <a href="{% url 'passenger_update' passenger.id %}" class="btn btn-warning btn-sm">Editar</a>
                     <a href="{% url 'passenger_delete' passenger.id %}" class="btn btn-danger btn-sm">Excluir</a>
                 </td>
+            </tr>
+            {% empty %}
+            <tr>
+                <td colspan="6" class="text-center">Nenhum passageiro cadastrado.</td>
             </tr>
             {% endfor %}
         </tbody>
